fitted interfaces for Train and Predict, added training routine for multiple DBs and live reader function

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # http://git-scm.com/docs/gitignore
 
 example_big.sqlite3
+Dani_ohne_Fahrhilfe_extremeWerte_Reifendurchdrehen_hinten.sqlite3
+Dani_ohne_Fahrhilfe_extremeWerte_Reifendurchdrehen_hinten2.sqlite3
 __pycache__/
 DeepWheels/.idea/
 
