--- a/DeepWheels/Data/InfluxDB/InfluxServer/influxdb.conf
+++ b/DeepWheels/Data/InfluxDB/InfluxServer/influxdb.conf
@@ -23,7 +23,7 @@
 
 [meta]
   # Where the metadata/raft database is stored
-  dir = "..\\meta"
+  dir = "\\meta"
 
   # Automatically create a default retention policy when creating a database.
   # retention-autocreate = true
@@ -42,10 +42,10 @@
 
 [data]
   # The directory where the TSM storage engine stores TSM files.
-  dir = "..\\data"
+  dir = "\\data"
 
   # The directory where the TSM storage engine stores WAL files.
-  wal-dir = "..\\wal"
+  wal-dir = "\\wal"
 
   # The amount of time that a write will wait before fsyncing.  A duration
   # greater than 0 can be used to batch up multiple fsync calls.  This is useful for slower
@@ -65,7 +65,7 @@
 
   # Whether queries should be logged before execution. Very useful for troubleshooting, but will
   # log any sensitive data contained within a query.
-  # query-log-enabled = true
+    query-log-enabled = false
 
   # Validates incoming writes to ensure keys only have valid unicode characters.
   # This setting will incur a small overhead because every key must be checked.
